--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@ footer{
                     </div>
 
                     <div class="single-takeCare-imgbox">
-                         <img src="images/take-care.jpg">
+                         <img src="take-care.jpg">
                     </div>
                </div>
           </section>
