--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
         <style>
             #contact-section
             {
-               background-image: linear-gradient(#3958a25e, #4089C7), url('images/contact.jpg');
+               background-image: linear-gradient(#3958a25e, #4089C7), url('contact.jpg');
                padding: 100px 0;
                background-repeat: no-repeat;
                background-size: cover;
