--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
     <style>
         #third-section
         {
-          background-image: url('images/black.jpeg');
+          background-image: url('black.jpeg');
           background-repeat: no-repeat;
           background-position: center center;
           background-size: cover;
