--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ only screen and (max-width: 940px) {
 
 
 header{
-     background-image: url('images/bannerr.jpg');
+     background-image: url('bannerr.jpg');
      height: 90vh;
      background-repeat: no-repeat;
      background-size: cover;
